# FmriTools

./: .coverage  .gitignore  CHANGELOG.md  CITATION.cff  DEADJOE  MANIFEST.in  README.md  REGRESSION.md  TODO.md  requirements-dev.txt  requirements.txt  requirements_extra.txt  setup.cfg  setup.py
analysis/: _fft.nii  alff_analysis.py  analyse_psf.py  analyze_alff.py  analyze_psf.py  autocorr2d.py  mtf_sim_analysis.py  odc_exp_analysis.py  odc_exp_plot.py  odc_sim_analysis.py  odc_sim_plot.py  reliability_measure.py  visualize_psf.py
behavior/: analysis_fixation.py  check_rivalry.py  onsets_rivalry.m
fmri_tools/: __init__.py
lib/: __init__.py
mapping/: .xdebug_tksurfer  ana2epi_surf.py  make_isoline.py  make_retinotopy_movie.py  make_vfs.py  map2ana.py  map2epi_surf.py  map_epi4d.py
misc/: colour_perception_example.py  cut_image.py  make_relief.py
movie/: movie_period.py  movie_retinotopy.py  movie_retinotopy2.py  movie_retinotopy3.py  movie_series.py
old/: alff.py  make_layer.py
preprocessing/: boco_vaso.py  boco_vaso_regrid.py  check_moco.m  check_preprocessing.py  check_preprocessing_afni.py  check_preprocessing_temp.py  gnl_undistortion.py  gnl_undistortion_time.py  merge_outlier_vaso.py  mpm_range.py  plot_moco_vaso.m  preprocessing.m  preprocessing_nonrivalry1.m  preprocessing_nonrivalry2.m  preprocessing_odc1.m  preprocessing_odc2.m  preprocessing_odc3.m  preprocessing_phase.py  preprocessing_retinotopy.m  preprocessing_rivalry1.m  preprocessing_rivalry2.m  read_bandwidth_phase.py  split_vaso.py  temporal_correction.py  upsample_outlier_vaso.py
(+739 files in other folders)
