[metadata]
name = fmri_tools
version = attr: fmri_tools.__version__
author = Daniel Haenelt
author_email = daniel.haenelt@gmail.com
description = Python package for the analysis of high-resolution fMRI data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haenelt/FmriTools
project_urls =
    Bug Tracker = https://github.com/haenelt/FmriTools/issues
license = GPL-3.0-only
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy
    nibabel
    scipy
    matplotlib
    scikit-image
    imageio
    shapely
    descartes
    sh
    h5py
    nilearn
    pydicom
    joblib
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.extras_require]
test = 
    pytest
    coverage

[options.package_data]
* = *.m, *.sh
